--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,113 +1,96 @@
+update vscode to [MS_TAG](https://code.visualstudio.com/updates/vMS_TAG_SHORT)
 
-See https://voideditor.com for Void's official download page.
-
-For maintainers: [`void-builder/`](https://github.com/voideditor/void-builder#readme)
-
-# Binaries
-
-## Windows
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidSetup-x64-RELEASE_VERSION.exe">Windows (x64)</a>
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidSetup-arm64-RELEASE_VERSION.exe">Windows (ARM)</a>
-
-## Mac
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void.x64.RELEASE_VERSION.dmg">Mac (x64 / Intel)</a>
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void.arm64.RELEASE_VERSION.dmg">Mac (ARM / M Chip)</a>
-
-
-## All binaries
-<details>
-
-Here are all the binaries that VSCodium's build pipeline produces if you want to dig in.
+RELEASE_NOTES
 
 ## x86 64bits
 
 <table>
   <tr>
-    <td rowspan="7">Windows (x64)</td>
+    <td rowspan="7">Windows</td>
     <td>User Installer</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidUserSetup-x64-RELEASE_VERSION.exe">VoidUserSetup-x64-RELEASE_VERSION.exe</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodiumUserSetup-x64-RELEASE_VERSION.exe">VSCodiumUserSetup-x64-RELEASE_VERSION.exe</a></td>
   </tr>
   <tr>
     <td>System Installer</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidSetup-x64-RELEASE_VERSION.exe">VoidSetup-x64-RELEASE_VERSION.exe</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodiumSetup-x64-RELEASE_VERSION.exe">VSCodiumSetup-x64-RELEASE_VERSION.exe</a></td>
   </tr>
   <tr>
     <td>.zip</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-win32-x64-RELEASE_VERSION.zip">Void-win32-x64-RELEASE_VERSION.zip</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-win32-x64-RELEASE_VERSION.zip">VSCodium-win32-x64-RELEASE_VERSION.zip</a></td>
   </tr>
   <tr>
     <td>.msi - updates enabled</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-x64-RELEASE_VERSION.msi">Void-x64-RELEASE_VERSION.msi</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-x64-RELEASE_VERSION.msi">VSCodium-x64-RELEASE_VERSION.msi</a></td>
   </tr>
   <tr>
     <td>.msi - updates disabled</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-x64-updates-disabled-RELEASE_VERSION.msi">Void-x64-updates-disabled-RELEASE_VERSION.msi</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-x64-updates-disabled-RELEASE_VERSION.msi">VSCodium-x64-updates-disabled-RELEASE_VERSION.msi</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-win32-x64-RELEASE_VERSION.tar.gz">void-reh-win32-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-win32-x64-RELEASE_VERSION.tar.gz">vscodium-reh-win32-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-win32-x64-RELEASE_VERSION.tar.gz">void-reh-web-win32-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-win32-x64-RELEASE_VERSION.tar.gz">vscodium-reh-web-win32-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
-    <td rowspan="4">macOS (Intel Chip)</td>
+    <td rowspan="4">macOS</td>
     <td>.dmg</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void.x64.RELEASE_VERSION.dmg">Void.x64.RELEASE_VERSION.dmg</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium.x64.RELEASE_VERSION.dmg">VSCodium.x64.RELEASE_VERSION.dmg</a></td>
   </tr>
   <tr>
     <td>.zip</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-darwin-x64-RELEASE_VERSION.zip">Void-darwin-x64-RELEASE_VERSION.zip</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-darwin-x64-RELEASE_VERSION.zip">VSCodium-darwin-x64-RELEASE_VERSION.zip</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-darwin-x64-RELEASE_VERSION.tar.gz">void-reh-darwin-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-darwin-x64-RELEASE_VERSION.tar.gz">vscodium-reh-darwin-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-darwin-x64-RELEASE_VERSION.tar.gz">void-reh-web-darwin-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-darwin-x64-RELEASE_VERSION.tar.gz">vscodium-reh-web-darwin-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
-  <td rowspan="7">Linux (x64)</td>
+  <td rowspan="7">Linux</td>
     <td>.deb</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_amd64.deb">void_RELEASE_VERSION_amd64.deb</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium_RELEASE_VERSION_amd64.deb">codium_RELEASE_VERSION_amd64.deb</a></td>
   </tr>
   <tr>
     <td>.rpm</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-RELEASE_VERSION-el9.x86_64.rpm">void-RELEASE_VERSION-el9.x86_64.rpm</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium-RELEASE_VERSION-el9.x86_64.rpm">codium-RELEASE_VERSION-el9.x86_64.rpm</a></td>
   </tr>
   <tr>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-x64-RELEASE_VERSION.tar.gz">Void-linux-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-x64-RELEASE_VERSION.tar.gz">VSCodium-linux-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>AppImage</td>
     <td>
-      <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-RELEASE_VERSION.glibc2.29-x86_64.AppImage">Void-RELEASE_VERSION.glibc2.29-x86_64.AppImage</a><br />
-      <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-RELEASE_VERSION.glibc2.29-x86_64.AppImage.zsync">Void-RELEASE_VERSION.glibc2.29-x86_64.AppImage.zsync</a>
+      <a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-RELEASE_VERSION.glibc2.29-x86_64.AppImage">VSCodium-RELEASE_VERSION.glibc2.29-x86_64.AppImage</a><br />
+      <a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-RELEASE_VERSION.glibc2.29-x86_64.AppImage.zsync">VSCodium-RELEASE_VERSION.glibc2.29-x86_64.AppImage.zsync</a>
     </td>
   </tr>
   <tr>
     <td>Snap</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_amd64.snap">void_RELEASE_VERSION_amd64.snap</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium_RELEASE_VERSION_amd64.snap">codium_RELEASE_VERSION_amd64.snap</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-x64-RELEASE_VERSION.tar.gz">void-reh-linux-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-x64-RELEASE_VERSION.tar.gz">vscodium-reh-linux-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-x64-RELEASE_VERSION.tar.gz">void-reh-web-linux-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-x64-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td rowspan="2">Alpine</td>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-alpine-x64-RELEASE_VERSION.tar.gz">void-reh-alpine-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-alpine-x64-RELEASE_VERSION.tar.gz">vscodium-reh-alpine-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-alpine-x64-RELEASE_VERSION.tar.gz">void-reh-web-alpine-x64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-alpine-x64-RELEASE_VERSION.tar.gz">vscodium-reh-web-alpine-x64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -115,68 +98,68 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
 
 <table>
   <tr>
-    <td rowspan="3">Windows (ARM)</td>
+    <td rowspan="3">Windows</td>
     <td>User Installer</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidUserSetup-arm64-RELEASE_VERSION.exe">VoidUserSetup-arm64-RELEASE_VERSION.exe</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodiumUserSetup-arm64-RELEASE_VERSION.exe">VSCodiumUserSetup-arm64-RELEASE_VERSION.exe</a></td>
   </tr>
   <tr>
     <td>System Installer</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/VoidSetup-arm64-RELEASE_VERSION.exe">VoidSetup-arm64-RELEASE_VERSION.exe</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodiumSetup-arm64-RELEASE_VERSION.exe">VSCodiumSetup-arm64-RELEASE_VERSION.exe</a></td>
   </tr>
   <tr>
     <td>.zip</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-win32-arm64-RELEASE_VERSION.zip">Void-win32-arm64-RELEASE_VERSION.zip</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-win32-arm64-RELEASE_VERSION.zip">VSCodium-win32-arm64-RELEASE_VERSION.zip</a></td>
   </tr>
   <tr>
-    <td rowspan="4">macOS (Apple Silicon)</td>
+    <td rowspan="4">macOS</td>
     <td>.dmg</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void.arm64.RELEASE_VERSION.dmg">Void.arm64.RELEASE_VERSION.dmg</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium.arm64.RELEASE_VERSION.dmg">VSCodium.arm64.RELEASE_VERSION.dmg</a></td>
   </tr>
   <tr>
     <td>.zip</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-darwin-arm64-RELEASE_VERSION.zip">Void-darwin-arm64-RELEASE_VERSION.zip</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-darwin-arm64-RELEASE_VERSION.zip">VSCodium-darwin-arm64-RELEASE_VERSION.zip</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-darwin-arm64-RELEASE_VERSION.tar.gz">void-reh-darwin-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-darwin-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-darwin-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-darwin-arm64-RELEASE_VERSION.tar.gz">void-reh-web-darwin-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-darwin-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-web-darwin-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
-    <td rowspan="6">Linux (ARM)</td>
+    <td rowspan="6">Linux</td>
     <td>.deb</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_arm64.deb">void_RELEASE_VERSION_arm64.deb</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium_RELEASE_VERSION_arm64.deb">codium_RELEASE_VERSION_arm64.deb</a></td>
   </tr>
   <tr>
     <td>.rpm</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-RELEASE_VERSION-el9.aarch64.rpm">void-RELEASE_VERSION-el9.aarch64.rpm</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium-RELEASE_VERSION-el9.aarch64.rpm">codium-RELEASE_VERSION-el9.aarch64.rpm</a></td>
   </tr>
   <tr>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-arm64-RELEASE_VERSION.tar.gz">Void-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-arm64-RELEASE_VERSION.tar.gz">VSCodium-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Snap</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_arm64.snap">void_RELEASE_VERSION_arm64.snap</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium_RELEASE_VERSION_arm64.snap">codium_RELEASE_VERSION_arm64.snap</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-arm64-RELEASE_VERSION.tar.gz">void-reh-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-arm64-RELEASE_VERSION.tar.gz">void-reh-web-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td rowspan="2">Alpine</td>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-alpine-arm64-RELEASE_VERSION.tar.gz">void-reh-alpine-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-alpine-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-alpine-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-alpine-arm64-RELEASE_VERSION.tar.gz">void-reh-web-alpine-arm64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-alpine-arm64-RELEASE_VERSION.tar.gz">vscodium-reh-web-alpine-arm64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -186,23 +169,23 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
   <tr>
     <td rowspan="5">Linux</td>
     <td>.deb</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_armhf.deb">void_RELEASE_VERSION_armhf.deb</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium_RELEASE_VERSION_armhf.deb">codium_RELEASE_VERSION_armhf.deb</a></td>
   </tr>
   <tr>
     <td>.rpm</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-RELEASE_VERSION-el9.armv7hl.rpm">void-RELEASE_VERSION-el9.armv7hl.rpm</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/codium-RELEASE_VERSION-el9.armv7hl.rpm">codium-RELEASE_VERSION-el9.armv7hl.rpm</a></td>
   </tr>
   <tr>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-armhf-RELEASE_VERSION.tar.gz">Void-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-armhf-RELEASE_VERSION.tar.gz">VSCodium-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-armhf-RELEASE_VERSION.tar.gz">void-reh-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-armhf-RELEASE_VERSION.tar.gz">vscodium-reh-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-armhf-RELEASE_VERSION.tar.gz">void-reh-web-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-armhf-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-armhf-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -212,15 +195,15 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
   <tr>
     <td rowspan="3">Linux</td>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-ppc64le-RELEASE_VERSION.tar.gz">Void-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-ppc64le-RELEASE_VERSION.tar.gz">VSCodium-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-ppc64le-RELEASE_VERSION.tar.gz">void-reh-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz">vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz">void-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -230,15 +213,15 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
   <tr>
     <td rowspan="3">Linux</td>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-riscv64-RELEASE_VERSION.tar.gz">Void-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-riscv64-RELEASE_VERSION.tar.gz">VSCodium-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-riscv64-RELEASE_VERSION.tar.gz">void-reh-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-riscv64-RELEASE_VERSION.tar.gz">vscodium-reh-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz">void-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-riscv64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -248,15 +231,15 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
   <tr>
     <td rowspan="3">Linux</td>
     <td>.tar.gz</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-linux-loong64-RELEASE_VERSION.tar.gz">Void-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-loong64-RELEASE_VERSION.tar.gz">VSCodium-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-loong64-RELEASE_VERSION.tar.gz">void-reh-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-loong64-RELEASE_VERSION.tar.gz">vscodium-reh-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-loong64-RELEASE_VERSION.tar.gz">void-reh-web-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-loong64-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-loong64-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
 
@@ -266,17 +249,10 @@ Here are all the binaries that VSCodium's build pipeline produces if you want to
   <tr>
     <td rowspan="2">Linux</td>
     <td>Remote Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-linux-s390x-RELEASE_VERSION.tar.gz">void-reh-linux-s390x-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-s390x-RELEASE_VERSION.tar.gz">vscodium-reh-linux-s390x-RELEASE_VERSION.tar.gz</a></td>
   </tr>
   <tr>
     <td>Web Host</td>
-    <td><a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void-reh-web-linux-s390x-RELEASE_VERSION.tar.gz">void-reh-web-linux-s390x-RELEASE_VERSION.tar.gz</a></td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-web-linux-s390x-RELEASE_VERSION.tar.gz">vscodium-reh-web-linux-s390x-RELEASE_VERSION.tar.gz</a></td>
   </tr>
 </table>
-
-
-## Linux
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/Void-RELEASE_VERSION.glibc2.29-x86_64.AppImage">Linux (AppImage)</a>
-- <a href="https://github.com/voideditor/binaries/releases/download/RELEASE_VERSION/void_RELEASE_VERSION_arm64.deb">Linux (ARM)</a>
-
-</details>
